# notebook-agent

./: README.md  pyproject.toml
notebook_agent/: __init__.py  agent.py  builder.py  cli.py
