[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebook-agent"
version = "0.1.0"
description = "Generate and execute Jupyter notebooks from natural-language task descriptions using Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["jupyter", "notebook", "llm", "claude", "anthropic", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
    "pandas>=2.0",
    "nbformat>=5.9",
    "nbconvert>=7.0",
    "jupyter-client>=8.0",
    "ipykernel>=6.0",
]

[project.scripts]
notebook-agent = "notebook_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/example/notebook-agent"
Issues = "https://github.com/example/notebook-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["notebook_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
